[package]
name = "raster-utils"
version = "0.1.0"
authors = ["Tiago Sanona"]
edition = "2018"
description = "Utilities for geospacial rasters"

repository = "https://github.com/AspecScire/rasters.rs"
readme = "README.md"
license = "Apache-2.0/MIT"

[features]
use-rayon = ["rayon"]
#gdal = ["gdal"]

[dependencies]

# Math and algo deps
ndarray = "0.16.1"
nalgebra = "0.33.2"

# GIS deps
# has updated version of ndarray
geo = { version = "0.29.3", features = ["use-proj"]}
gdal = "0.17.1" #{ version = "0.17.1", optional = true }

# Serialization
serde = "1.0.217"
serde_derive = "1.0.217"

# Error handling
thiserror = "2.0.11"


# Optional Dependencies
rayon = { version = "1.10.0", optional = true }
num = "0.4.3"
